apps/homebridge/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  selector:
    app: homebridge
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
  ports:
  - name: webui
    targetPort: 8581
    port: 8581
