apps/homebridge/install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge
  namespace: homebridge
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: homebridge
    app.kubernetes.io/name: homebridge
    app.kubernetes.io/part-of: homebridge
    app.kubernetes.io/instance: homebridge
    app.kubernetes.io/component: homebridge
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebridge.local.asztalos.net`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: homebridge
          namespace: homebridge
          port: 8581
  tls:
    secretName: local-asztalos-net-tls
